[project]
name = "groupproject"
version = "0.1.0"
description = "Group 3 Seattle Fire 911"
authors = [
    {name = "John Thomas",email = "thomasj199@gmail.com"}
]
package-mode = false
requires-python = ">=3.14"
dependencies = [
    "pandas (>=3.0.0,<4.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "geopandas (>=1.1.2,<2.0.0)",
    "folium (>=0.20.0,<0.21.0)",
    "mapclassify (>=2.10.0,<3.0.0)",
    "contextily (>=1.7.0,<2.0.0)"
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
